# eddie-auto-dev

./: .bitwarden_config  .coverage  .env.consolidated  .env.email  .env.example  .env.example.wiki  .env.mailu  .env.openai-compatible.example  .env.simple-mail  .gitguardian.yaml  .github_agent_env  .gitignore  .markdownlint.json  .mcp.json  .selenium_page.html  .tmp_auth_rpa4all_com_prod  ACCURACY_IMPROVEMENT_ANALYSIS.md  ACTION_PLAN_NO_DATA_GAUGES.md  AGENTS_WEBUI_INTEGRATION.md  ALERT_INTEGRATION_COMPLETE.md  ALERT_PIPELINE_IMPLEMENTATION_COMPLETE.md  ALERT_PIPELINE_TEST_RESULTS_2026-02-16.md  ANALISE_APRENDIZADO.md  API.md  APLICAR_GPU_SETUP_TODO.md  ARCHITECTURE.md  BITWARDEN_MIGRATION.md  BOOT_OPTIMIZATION.md  BTC_AGENT_ALARM_DIAGNOSTICS.md  BTC_AGENT_RESTART_SUCCESS_2026-02-26.md  BTC_TRADING_RECOVERY_SUMMARY.md  CALENDAR_README.md  CHANGELOG.md  CLAUDE_CODE_PROXY_FIX_2026-04-26.md  CLEANUP_EXECUTION_REPORT.md  CLINE_RESPONSE_FIX.md  CLOSED_OPEN_POSITIONS_SUMMARY.md  COMPARISON.md  CONTINUE_QUICKSTART.md  CONTINUE_README.md  (+733 more)
.archive/: README.md
.claude/: settings.json
.codex/: config.json
.codex-plugin/: plugin.json
.continue/: config-scaleway.json  config.json
.githooks/: post-commit  pre-commit
.github/: copilot-config.yml  copilot-instructions-extended.md  (+2 more)
clear_trading_agent/: __init__.py  config_PETR4.json  config_WINFUT.json  fast_model.py  market_rag.py  mt5_api.py  prometheus_exporter.py  pyproject.toml  requirements.txt  secrets_helper.py  tax_guardrails.py  trading_agent.py  training_db.py
clear_trading_agent/sql/: clear_schema.sql
(+5235 files in other folders)
