[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clear-trading-agent"
version = "0.1.0"
description = "Agente de trading para Clear Corretora (B3) via MT5 Bridge"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<3.0",
  "requests>=2.31,<3.0",
  "psycopg2-binary>=2.9,<3.0",
]
